# python-memory-importer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: pip.yml  wheels.yml
.vcpkg/physfs/: portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
src/: .gitignore  CMakeLists.txt  importer.cpp  importer.h  main.cpp  miniphysfs.h  physfs.shim.cpp  physfs.shim.h
tests/: conftest.py  test.py  test_invalid.py  test_memory.py  test_module.py  test_namespace.py  test_single.py
tests/assets/: Readme.md  single.py
tests/assets/module/: __init__.py  part1.py  part2.py
tests/assets/module/namespace/: part3.py
