[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
environment = { SYSTEM_VERSION_COMPAT="0" }
test-requires = ["pytest"]
test-command = "pytest {project}/tests/"
test-skip = "*universal2:arm64"

[tool.cibuildwheel.linux]
environment = { VCPKG_ROOT="~/.vcpkg/vcpkg" }
before-all = [
  "mkdir ~/.vcpkg",
  "git clone https://github.com/microsoft/vcpkg.git ~/.vcpkg/vcpkg",
  "~/.vcpkg/vcpkg/bootstrap-vcpkg.sh",
]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"
inherit.before-all = "prepend"
before-all = [
  "yum install curl zip unzip tar -y",
]


[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"
